// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dumpUIA Button UIA Dump 1`] = `
{
  "AutomationId": "components-tab",
  "Children": [
    {
      "AutomationId": "",
      "ControlType": 50020,
      "HelpText": "",
      "IsEnabled": true,
      "IsKeyboardFocusable": false,
      "LocalizedControlType": "text",
      "Name": "Components",
    },
  ],
  "ControlType": 50026,
  "HelpText": "",
  "IsEnabled": true,
  "IsKeyboardFocusable": true,
  "LocalizedControlType": "group",
  "Name": "",
}
`;

exports[`dumpUIA Search Bar UIA Dump 1`] = `
{
  "AutomationId": "apis-tab",
  "Children": [
    {
      "AutomationId": "",
      "ControlType": 50020,
      "HelpText": "",
      "IsEnabled": true,
      "IsKeyboardFocusable": false,
      "LocalizedControlType": "text",
      "Name": "APIs",
    },
  ],
  "ControlType": 50026,
  "HelpText": "",
  "IsEnabled": true,
  "IsKeyboardFocusable": true,
  "LocalizedControlType": "group",
  "Name": "",
}
`;

exports[`dumpUIA Search Bar UIA Dump 2`] = `
{
  "AutomationId": "explorer_search",
  "ControlType": 50004,
  "HelpText": "Search...",
  "IsEnabled": true,
  "IsKeyboardFocusable": true,
  "LocalizedControlType": "edit",
  "Name": "Search...",
}
`;
